# pwnkit

./: .gitignore  README.md  clean.sh  pyproject.toml
examples/heap-house-of-apple/travelgraph/: xpl.py
examples/heap-off-by-null/digital-bomb/: xpl.py
examples/house-of-apple/travelgraph/: README.md
examples/house-of-einherjar/digital-bomb/: README.md  xpl.py
examples/stack-overflow/evil-corp/: README.md  xpl.py
examples/stack-pivot/pstack/: README.md  xpl.py  xpl_testing.py
scripts/gdb-scripts/heap-trace/: count_heap.py  heap_trace.gdb  tree_heap_trace.py
scripts/helper-scrtips/: alpha_ae64.py  dump_bin.sh  patch_paths.sh  test  test.c
src/pwnkit/: FILE.py  __init__.py  __main__.py  _version.py  config.py  ctx.py  decors.py  hashpow.py  io.py  io.py.bak  iofiles.py  rop.py  setcontext.py  ucontext.py  utils.py
src/pwnkit/templates/: default.py.tpl  fmtstr.py.tpl  full.py.tpl  got.py.tpl  heap.py.tpl  iofile.py.tpl  minimal.py.tpl  mips.py.tpl  mips_kernel.py.tpl  ret2libc.py.tpl  ret2syscall.py.tpl  setcontext.py.tpl  srop.py.tpl
tests/: test_FILE.py  test_gdbx.py  test_utils.py
tools/: gen_type_hints.py
